# prim_algorithm

./: .gitignore  CMakeLists.txt  ReadME.md  hybrid.c  input_graph.txt  prim_benchmark.c  prim_parallel_mpi.c  prim_sequential.c  results.csv
openmp_native/: prim_parallel_openmp.c
parallel_algo/: prim_parallel.c
